# forgetit

./: .gitignore  README.md  mindset.md  pyproject.toml
app/: eval.py  item_judge.py  metrics.py  opt_metric.py  optimize.py  program.py  report.py
app/intake/: eval.py  main.py  models.py  optimize.py  program.py
artifacts/: memory_router_bootstrap.json
data/: forgetit_v0.jsonl  save_memory_test.jsonl  save_memory_train.jsonl  save_memory_val.jsonl
reports/: optimize_report.md
reports/20260519_184327/: report.md  row_metrics.csv  rows.json  summary.csv  summary.json
reports/20260519_184328/: report.md  row_metrics.csv  rows.json  summary.csv  summary.json
