[project]
name = "forgetit"
version = "0.1.0"
description = "Forgetit system using DSPy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy[numpy]",
    "python-dotenv",
    "dspy[optuna]",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
